reduce font-size h1 hero unit even more to prevent wrapping

--- a/source/stylesheets/partials/_home.scss
+++ b/source/stylesheets/partials/_home.scss
@@ -55,7 +55,7 @@ section.home {
         }
         
         h1 {
-          font-size: 1.3em;
+          font-size: 1.2em;
           margin-bottom: .5em;
           text-align: left;
 
